refactor: key generation